# uav-assesment-cpp

./: .gitignore  Dockerfile  README.md  run_mavros.sh  run_sitl.sh
.github/workflows/: ci.yml
docs/: CANDIDATES.md  DEVELOPERS.md
src/uav_control_cpp/: CMakeLists.txt  package.xml
src/uav_control_cpp/include/uav_control_cpp/: mavros_client.hpp  not_implemented.hpp
src/uav_control_cpp/src/: mavros_client.cpp
src/uav_tests_cpp/: CMakeLists.txt  package.xml
src/uav_tests_cpp/include/uav_tests_cpp/: mavros_fixture.hpp  skip_if.hpp
src/uav_tests_cpp/test/: test_task1_arm_disarm.cpp  test_task2_takeoff_land.cpp
src/uav_tests_cpp/tests/: run_e2e.sh  test_mavros_e2e.cpp
