<?xml version="1.0"?>
<package format="3">
  <name>uav_control_cpp</name>
  <version>0.1.0</version>
  <description>C++ MAVROS client (OFFBOARD, arm/disarm, takeoff/land helpers)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
