<?xml version="1.0"?>
<package format="3">
  <name>uav_tests_cpp</name>
  <version>0.0.1</version>
  <description>GTest e2e tests for MAVROS using candidate's uav_control_cpp</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_gtest</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>uav_control_cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>uav_control_cpp</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
